atualizacao para contato nas paginas

--- a/confirmacao/confirmacao.html
+++ b/confirmacao/confirmacao.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
   <!-- Nova meta tag para descrição -->
   <meta name="description" content="Confirmação de inscrição no processo seletivo da Agência Peixe Vivo">
 </head>
+
 <body>
   <!-- CABEÇALHO MELHORADO COM ARIA-LABEL -->
   <header class="site-header" role="banner" aria-label="Cabeçalho da página">
@@ -21,9 +23,9 @@
   <main class="confirmation-container" role="main">
     <!-- ÍCONE ACESSÍVEL -->
     <div class="confirmation-icon" aria-hidden="true">✅</div>
-    
+
     <h1 class="confirmation-title">Inscrição Confirmada!</h1>
-    
+
     <div class="confirmation-message">
       <p><strong>Sua inscrição foi recebida com sucesso!</strong></p>
       <p>Enviamos um comprovante para o e-mail cadastrado com todos os detalhes da sua inscrição.</p>
@@ -34,14 +36,20 @@
       <h3 id="next-steps-title">Próximos Passos:</h3>
       <ul>
         <li>Verifique seu e-mail para o comprovante de inscrição</li>
-        <li>Acompanhe os editais para as próximas etapas do processo</li>        
+        <li>Acompanhe os editais para as próximas etapas do processo</li>
       </ul>
     </section>
 
     <div class="contact-info">
       <p><strong>Agência Peixe Vivo</strong><br>
-      Em caso de dúvidas, entre em contato conosco.</p>
-      <p>selecao024.025@gmail.com</p>
+        Em caso de dúvidas, entre em contato conosco.</p>
+
+      <div class="email-highlight">
+        <span class="email-icon">📧</span>
+        <a href="mailto:selecao024.025@gmail.com" class="email-link">
+          selecao024.025@gmail.com
+        </a>
+      </div>
     </div>
 
     <!-- BOTÃO MELHORADO COM ATRIBUTOS ADICIONAIS -->
@@ -58,4 +66,5 @@
     </div>
   </footer>
 </body>
+
 </html>
