--- a/index.html
+++ b/index.html
@@ -97,10 +97,11 @@
               <label for="genero">Gênero</label>
               <select id="genero" name="genero" required>
                 <option value="">Selecione</option>
-                <option>Masculino</option>
-                <option>Feminino</option>
-                <option>Não-binário</option>
-                <option>Transgênero</option>
+                <option value="mulher_cis">Mulher</option>
+                <option value="homem_cis">Homem</option>
+                <option value="mulher_trans">Mulher Trans</option>
+                <option value="homem_trans">Homem Trans</option>
+                <option value="nao_binario">Não-Binário</option>
                 <option value="outro">Outro</option>
                 <option value="prefiro_nao_informar">Prefiro não informar</option>
               </select>
