--- a/obrigado/obrigado.html
+++ b/obrigado/obrigado.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Obrigado pelo interesse - Agência Peixe Vivo</title>
     <link rel="stylesheet" href="obrigado.css">
 </head>
+
 <body>
     <!-- CABEÇALHO COM IMAGEM COMO CAIXA SEPARADA -->
     <header class="site-header">
@@ -18,10 +20,10 @@
 
     <div class="thank-you-container">
         <div class="thank-you-icon">👋</div>
-        
+
         <!-- ✅ TÍTULO ATUALIZADO -->
         <h1 class="thank-you-title">Obrigado pelo seu interesse, mas não é possível prosseguir com sua inscrição!</h1>
-        
+
         <div class="thank-you-message">
             <p><strong>Agradecemos seu interesse em participar do nosso Processo Seletivo.</strong></p>
             <p>Entendemos e respeitamos sua decisão de não autorizar o uso dos dados.</p>
@@ -40,8 +42,14 @@
 
         <div class="contact-info">
             <p><strong>Agência Peixe Vivo</strong><br>
-            Em caso de dúvidas, entre em contato conosco.</p>
-            <p>selecao024.025@gmail.com</p>
+                Em caso de dúvidas, entre em contato conosco.</p>
+
+            <div class="email-highlight">
+                <span class="email-icon">📧</span>
+                <a href="mailto:selecao024.025@gmail.com" class="email-link">
+                    selecao024.025@gmail.com
+                </a>
+            </div>
         </div>
 
         <a href="../index.html" class="btn-back">Voltar ao Início</a>
@@ -55,4 +63,5 @@
         </div>
     </footer>
 </body>
+
 </html>
