atualizacao da msg de alerta

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <div class="alert-box" role="alert" aria-live="polite">
     <div class="alert-icon" aria-hidden="true">⚠️</div>
     <div class="alert-content">
-      <strong>A FINALIZAÇÃO DA INSCRIÇÃO SOMENTE OCORRERÁ APÓS O PAGAMENTO E ENVIO DO COMPROVANTE DE INSCRIÇÃO.</strong>
+      <strong>A FINALIZAÇÃO DA INSCRIÇÃO SOMENTE OCORRERÁ APÓS O PAGAMENTO E ENVIO DO COMPROVANTE DE INSCRIÇÃO OU DO ENVIO DO COMPROVANTE DE ISENÇÃO.</strong>
     </div>
   </div>
 
