--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Formulário de Inscrição - Agência Peixe Vivo</title>
   <meta name="description" content="Formulário de inscrição para o Processo Seletivo da Agência Peixe Vivo">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style/style.css">
 
   <!-- Bloquear validação automática do navegador -->
   <style>
@@ -454,7 +454,11 @@
     </form>
   </main>
 
-  <script src="script.js"></script>
+  <!-- scripts existentes -->
+  <script src="./js/script.js"></script>
+  
+  <!-- novo script de limite de data -->
+  <script src="./js/limite-data.js"></script>
 
   <!-- RODAPÉ -->
   <footer class="site-footer" role="contentinfo">
