correção no campo outro da seção 5

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
   <div class="alert-box" role="alert" aria-live="polite">
     <div class="alert-icon" aria-hidden="true">⚠️</div>
     <div class="alert-content">
-      <strong>A FINALIZAÇÃO DA INSCRIÇÃO SOMENTE OCORRERÁ APÓS O PAGAMENTO E ENVIO DO COMPROVANTE DE INSCRIÇÃO OU DO ENVIO DO COMPROVANTE DE ISENÇÃO.</strong>
+      <strong>A FINALIZAÇÃO DA INSCRIÇÃO SOMENTE OCORRERÁ APÓS O PAGAMENTO E ENVIO DO COMPROVANTE DE INSCRIÇÃO OU DO
+        ENVIO DO COMPROVANTE DE ISENÇÃO.</strong>
     </div>
   </div>
 
@@ -294,9 +295,9 @@
               <option>Amigos/Conhecidos</option>
               <option value="outro">Outro</option>
             </select>
-            <div class="hidden" id="origemInfoOutroContainer">
+            <div id="origemInfoOutroContainer" class="hidden">
               <label for="origemInfoOutro" class="sr-only">Especifique como obteve a informação</label>
-              <input type="text" id="origemInfoOutro" placeholder="Informe qual">
+              <input type="text" id="origemInfoOutro" name="origemInfoOutro" placeholder="Informe qual">
             </div>
           </div>
 
@@ -456,7 +457,7 @@
 
   <!-- scripts existentes -->
   <script src="./js/script.js"></script>
-  
+
   <!-- novo script de limite de data -->
   <script src="./js/limite-data.js"></script>
 
