alteração no campo de taxa de inscrição
add parte ao testo do label

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
           </div>
 
           <div class="form-field">
-            <label for="taxa">Taxa de Inscrição</label>
+            <label for="taxa">Taxa de Inscrição OU Isento</label>
             <select id="taxa" name="taxa" required>
               <option value="">Selecione</option>
               <option value="isento">Isento</option>
@@ -469,5 +469,6 @@
     </div>
   </footer>
 </body>
+
 
 </html>
