Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
           </div>
 
           <div class="form-field">
-            <label for="taxa">Taxa de Inscrição OU Isento</label>
+            <label for="taxa">Taxa de Inscrição OU Isenção</label>
             <select id="taxa" name="taxa" required>
               <option value="">Selecione</option>
               <option value="isento">Isento</option>
@@ -472,3 +472,4 @@
 
 
 </html>
+
